Fixed collapse-section styling issues.

--- a/Home.css
+++ b/Home.css
@@ -18,6 +18,11 @@ a {
 	cursor: pointer;
 }
 
+a:hover,
+a:active {
+	text-decoration: underline;
+}
+
 .info-icon {
 	width: 15px;
 	
@@ -73,6 +78,12 @@ div.tooltip.hidden {
 
 .light-gray {
 	color: #aaa;
+}
+
+repo-results {
+	display: block;
+	
+	margin-top: 50px;
 }
 
 div.repo-info, div.collapse-container {
@@ -158,7 +169,7 @@ p.repo-overlay-text {
     margin: 0;
     right: 0;
     top: 50%;
-    transform: translateY(-50%)translateY(8px);
+    transform: translateY(-50%);
     
     display: none;
 }
@@ -309,9 +320,6 @@ button {
 
 .user-info {
 	text-align: right;
-	
-	position: relative;
-	bottom: 12px;
 }
 
 .user-info a {
