--- a/app/components/collapseSection.component.css
+++ b/app/components/collapseSection.component.css
@@ -1,12 +1,10 @@
 div.collapse-container {
     overflow: hidden;
-}
-
-div.collapse-container {
     margin-top: 0;
+    position: relative;
     
-    padding-bottom: 30px;
-    margin-bottom: -30px;
+    /*padding-bottom: 30px;
+    margin-bottom: -30px;*/
 }
 
 div.collapse-container,
@@ -24,13 +22,21 @@ div.collapse-container.closed {
 }
 
 div.collapse-container hr:first-child {
-    margin-bottom: 50px;
+    /*margin-bottom: 50px;*/
 }
 
 hr {
-    border: 1.5px solid #444;
+    /*border: 1.5px solid #444;
     
-    margin: 30px 0;
+    margin: -3px;*/
+    
+    margin: 0;
+    border: none;
+    
+    height: 3px;
+    margin-bottom: -3px;
+    
+    background-color: #444;
 }
 
 hr:after {
@@ -40,27 +46,27 @@ hr:after {
     background-color: #444;
     position: absolute;
     left: 50%;
-    transform: translate(-50%,-50%)rotateZ(45deg);
+    transform: translateY(1px)translate(-50%,-50%)rotateZ(45deg);
 }
 
 div.collapse-section {
-    padding-top: 20px;
-    
-    margin-bottom: -83px;
+    /*margin-bottom: -63px;
     
     overflow: hidden;
     
-    position: relative;
+    position: relative;*/
 }
 
 div.collapse-content {
-    margin-top: -20px;
+    padding: 30px 0;
 }
 
 collapse-section {
     display: block;
+    
+    /*margin: 10px 0;*/
 }
 
 collapse-section[end] {
-    margin-bottom: 83px;
+    margin-bottom: 5px;
 }
